# Libraries

./: .gitmodules  CMakeLists.txt  Testing.cpp  Testing.hpp  converter.hpp  main.cpp
built_libraries/: libsfml-network-d.so.3.0.0
built_libraries/UNIX/: libbox2d.so.2  libsfml-network-d.so.3.0.0  libsfml-system-d.so.3.0  libsfml-system-d.so.3.0.0
built_libraries/Windows/: SFGUI-d.lib  box2d.lib  sfml-audio-d.lib  sfml-graphics-d.lib  sfml-network-d.lib  sfml-system-d.lib  sfml-window-d.lib
